# advent-of-code-2022

./: CMakeLists.txt  Dockerfile  README.md
days/day01/: CMakeLists.txt  main.cpp
days/day01/include/: day01.h
days/day01/src/: day01.cpp
days/day01/tests/: test_day01.cpp
days/day02/: CMakeLists.txt  day02.hpp  main.cpp  test_day02.cpp
days/day03/: CMakeLists.txt  day03.cpp  day03.hpp  main.cpp  test_day03.cpp
days/day04/: CMakeLists.txt  day04.hpp  main.cpp  test_day04.cpp
days/day05/: CMakeLists.txt  day05.cpp  day05.hpp  main.cpp  test_day05.cpp
include/: tools.h
src/: tools.cpp
tests/: CMakeLists.txt  test_tools.cpp
